# kuri_edu

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  setup.cfg
activities/: README.md  autonomous_navigation.md  cap_touch.md  chest_light_charging_pattern.md  make_a_map.md  (+4 more)
kuri_edu/: CMakeLists.txt  README.md  package.xml  setup.py
kuri_edu/launch/: autonomous_navigation.launch  cap_touch_chest_light.launch  chest_light_controller.launch  head_controller.launch  joystick_teleop.launch  kuri_edu.launch  kuri_mapping.launch  kuri_remote.launch  mapping.launch  mapping_controller.launch  nav_controller.launch  safety_controller.launch
kuri_edu/rostest/: .test_nav_controller.py.swo  mkdir.bash  test_cap_touch_chest_light.launch  test_cap_touch_chest_light.py  test_chest_light_controller.launch  test_chest_light_controller.py  test_head_controller.launch  test_head_controller.py  test_mapping_controller.launch  test_mapping_controller.py  test_nav_controller.launch  test_nav_controller.py  test_safety_controller.launch  test_safety_controller.py
kuri_edu/rostest/test_data/home_directory_1/: README.md  map.map_capnp
kuri_edu/rostest/test_data/home_directory_1/oort_maps/5d991657-1236-45c1-af8b-c6e4e929eedb/: map.map_capnp  map.map_meta_capnp  map.md5  map.pgm  map.yaml
kuri_edu/scripts/: cap_touch_chest_light  chest_light_controller  head_control  head_controller  joystick_teleop  mapping_controller  nav_controller  safety_controller  simple_kuri
kuri_edu/src/kuri_edu/: __init__.py  battery_monitor.py  cap_touch_chest_light.py  chest_light_controller.py  head_controller.py  joystick_teleop.py  light_animation.py  map_manager.py  mapping_controller.py  nav_controller.py  power_monitor.py  pulse_animation.py  safety_controller.py
kuri_edu/test/: test_battery_monitor.py  test_chest_light_controller.py  test_kuri_edu_launch.py  test_light_animation.py  test_power_monitor.py  test_pulse_animation.py
kuri_edu/test/test_data/: bad_node.launch
(+5 files in other folders)
